--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
     <header>
         <nav class="navigation">
-            <a href="./index.html" class="logo"><span class="logo_web">Web</span>Studio</a>
+            <a href="./index.html" class="header_logo">Web<span class="logo_studio">Studio</span></a>
             <ul class="navigation_list">
-                <li><a href="" class="navigation_item">Studio</a></li>
+                <li><a href="./index.html" class="navigation_item">Studio</a></li>
                 <li><a href="" class="navigation_item">Portfolio</a></li>
                 <li><a href="" class="navigation_item">Contacts</a></li>
             </ul>
@@ -33,12 +33,12 @@
     <main>
 
         <section class="hero_image">
-            <h1>Effective Solutions for Your Business</h1>
+            <h1 class="main_title">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
         </section>
 
         <section>
-            <h2>no content</h2>
+            <h2 class="section_name">no content</h2>
             <ul>
                 <li>
                     <h3 class="advantage">Strategy</h3>
@@ -63,22 +63,22 @@
         <section class="our_team">
             <h2 class="section_name">Our Team</h2>
             <ul>
-                <li>
+                <li class="member">
                     <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
                     <h3 class="name">Mark Guerrero</h3>
                     <p class="description">Product Designer</p>
                 </li>
-                <li>
+                <li class="member">
                     <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" />
                     <h3 class="name">Tom Ford</h3>
                     <p class="description">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="member">
                     <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260" />
                     <h3 class="name">Camila Garcia</h3>
                     <p class="description">Marketing</p>
                 </li>
-                <li>
+                <li class="member">
                     <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" />
                     <h3 class="name">Daniel Wilson</h3>
                     <p class="description">UI Designer</p>
@@ -88,7 +88,6 @@
 
         <section class="our_product">
             <h2 class="section_name">Our Portfolio</h2>
-            <section>
                 <ul>
                     <li>
                         <img src="./images/banking.jpg" alt="Banking App" width="360" height="300" />
@@ -105,10 +104,6 @@
                         <h3 class="name">Meditation App</h3>
                         <p class="description">App</p>
                     </li>
-                </ul>
-            </section>
-            <section>
-                <ul>
                     <li>
                         <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300" />
                         <h3 class="name">Taxi Service</h3>
@@ -125,14 +120,13 @@
                         <p class="description">Marketing</p>
                     </li>
                 </ul>
-            </section>
         </section>
 
     </main>
 
-    <footer>
-        <a href="./index.html" class="logo"><span class="logo_web">Web</span><span class="studio">Studio</span></a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a href="./index.html" class="footer_logo"><span class="logo_web">Web<span class="footer_logo_studio">Studio</span></a>
+        <p class="footer_description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
 </body>
