--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </main>
 
     <footer class="footer">
-        <a href="./index.html" class="footer_logo"><span class="logo_web">Web<span class="footer_logo_studio">Studio</span></a>
+        <a href="./index.html" class="footer_logo">Web<span class="footer_logo_studio">Studio</span></a>
         <p class="footer_description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
