--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h2 class="section_name">Our Team</h2>
             <ul>
                 <li class="member">
-                    <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
+                    <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260">
                     <h3 class="name">Mark Guerrero</h3>
                     <p class="description">Product Designer</p>
                 </li>
@@ -74,12 +74,12 @@
                     <p class="description">Frontend Developer</p>
                 </li>
                 <li class="member">
-                    <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260" />
+                    <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260">
                     <h3 class="name">Camila Garcia</h3>
                     <p class="description">Marketing</p>
                 </li>
                 <li class="member">
-                    <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" />
+                    <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260">
                     <h3 class="name">Daniel Wilson</h3>
                     <p class="description">UI Designer</p>
                 </li>
@@ -90,32 +90,32 @@
             <h2 class="section_name">Our Portfolio</h2>
                 <ul>
                     <li>
-                        <img src="./images/banking.jpg" alt="Banking App" width="360" height="300" />
+                        <img src="./images/banking.jpg" alt="Banking App" width="360" height="300">
                         <h3 class="name">Banking App</h3>
                         <p class="description">App</p>
                     </li>
                     <li>
-                        <img src="./images/payments.jpg" alt="Cashless Payments" width="360" height="300" />
+                        <img src="./images/payments.jpg" alt="Cashless Payments" width="360" height="300">
                         <h3 class="name">Cashless Payment</h3>
                         <p class="description">Marketing</p>
                     </li>
                     <li>
-                        <img src="./images/meditation.jpg" alt="Meditation App" width="360" height="300" />
+                        <img src="./images/meditation.jpg" alt="Meditation App" width="360" height="300">
                         <h3 class="name">Meditation App</h3>
                         <p class="description">App</p>
                     </li>
                     <li>
-                        <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300" />
+                        <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300">
                         <h3 class="name">Taxi Service</h3>
                         <p class="description">Marketing</p>
                     </li>
                     <li>
-                        <img src="./images/illustrations.jpg" alt="Screen Illustrations" width="360" height="300" />
+                        <img src="./images/illustrations.jpg" alt="Screen Illustrations" width="360" height="300">
                         <h3 class="name">Screen Illustrations</h3>
                         <p class="description">Design</p>
                     </li>
                     <li>
-                        <img src="./images/courses.jpg" alt="Online Courses" width="360" height="300" />
+                        <img src="./images/courses.jpg" alt="Online Courses" width="360" height="300">
                         <h3 class="name">Online Courses</h3>
                         <p class="description">Marketing</p>
                     </li>
