--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <p class="description">Product Designer</p>
                 </li>
                 <li class="member">
-                    <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" />
+                    <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260">
                     <h3 class="name">Tom Ford</h3>
                     <p class="description">Frontend Developer</p>
                 </li>
